--- a/.github/workflows/comment.yml
+++ b/.github/workflows/comment.yml
@@ -34,14 +34,14 @@ jobs:
           $retryDelay = 5 # Initial retry delay in seconds
 
           while ($retryCount -lt $maxRetries) {
-            Write-Host "Attempt $(retryCount+1) out of $(maxRetries): gh pr edit $($payload.issue.number) --add-label `"$label`""
+            Write-Host "Attempt $($retryCount+1) out of $($maxRetries: gh pr edit $($payload.issue.number) --add-label `"$label`""
             gh pr edit $payload.issue.html_url --add-label "$label"
             
             if ($LASTEXITCODE -eq 0) {
-              Write-Host "Label added successfully on attempt $(retryCount+1) out of $maxRetries"
+              Write-Host "Label added successfully on attempt $($retryCount+1) out of $maxRetries"
               break
             } else {
-              Write-Warning "Failed to add label on attempt $(retryCount+1) out of $maxRetries"
+              Write-Warning "Failed to add label on attempt $($retryCount+1) out of $maxRetries"
               $retryCount++
               if ($retryCount -lt $maxRetries) {
                 # Exponential backoff in seconds: 
