--- a/.github/workflows/comment.yml
+++ b/.github/workflows/comment.yml
@@ -45,14 +45,15 @@ jobs:
               Write-Warning "Failed to add label on attempt $($retryCount+1) out of $($maxRetries)."
               $retryCount++
               if ($retryCount -lt $maxRetries) {
-                # Exponential backoff in seconds:
-                #  5 =  1*5
-                # 10 =  2*5
-                # 20 =  4*5
-                # 40 =  8*5
-                $retryDelay = $retryDelay * 2
-                Write-Host "Sleeping for $retryDelay seconds."
+                # $retryDelay = 5 exponential backoff in seconds:
+                # attempt 2:  5 =  1*5
+                # attempt 3: 10 =  2*5
+                # attempt 4: 20 =  4*5
+                # attempt 5: 40 =  8*5
+                Write-Host "Sleeping for $retryDelay seconds..." -NoNewline
                 Start-Sleep -Seconds $retryDelay
+                Write-Host " done."
+                $retryDelay = $retryDelay * 2
               }
             }
           }
